--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <title>Welcome to the Hellmouth</title>
     <meta name="author" content="Rupert Giles">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <h1>Buffy Summers</h1>
     <section id="About">
         <h2>About</h2>
-    <p>Buffy Anne Summers is the Slayer. She likes shopping, low fat froyo, and boys.</p>
+    <p>Buffy Anne Summers is the Slayer. She likes shopping, low fat froyo, and slaying vampires.</p>
     </section>
 <section id="Experience">
     <h2>Experience</h2>
