fixed google font error

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Flavors&family=Jacquard+12&family=Jacquarda+Bastarda+9+Charted&display=swap" rel="stylesheet">
     <title>Welcome to the Hellmouth</title>
     <meta name="author" content="Rupert Giles">
     <link rel="stylesheet" href="css/index.css">
