formatted styles added

--- a/index.html
+++ b/index.html
@@ -9,29 +9,68 @@
     <meta name="author" content="Rupert Giles">
     <link rel="stylesheet" href="css/index.css">
 </head>
+<nav>   
+    <ul>
+        <li><a href="#About">About</a></li>
+        <li><a href="#Experience">Experience</a></li>
+        <li><a href="#Connect">Connect</a></li>
+        <li><a href="#Skills">Skills</a></li>
+        <li><a href="#Projects">Projects</a></li>
+    </ul>
+</nav>
+
 <body>
     <h1>Buffy Summers</h1>
-    <section id="About">
-        <h2>About</h2>
+
+ <section id="About">
+    <h2>About</h2>
     <p>Buffy Anne Summers is the Slayer. She likes shopping, low fat froyo, and slaying vampires.</p>
-    </section>
+</section>
+
 <section id="Experience">
     <h2>Experience</h2>
-    <ul>
-        <li>Vampire Slayer at Sunnydale High School (1997-1999)</li>
-        <li>Student at UC Sunnydale (2003-2004)</li>
-        <li>Crew Member at Doublemeat Palace (2004)</li>
-        <li>Sunnydale High Guidance Counselor (2004)</li>
-    </ul>
-    </section>
+    <div class="job">
+        <span>Vampire Slayer</span> 
+        <span>1997-current</span>
+        </div>
+    <p>Protecting the world from vampires, demons, and the forces of darkness. Daily tasks include patrolling, researching in the library, and lying to her mom.</p>
+    <div class="job">
+        <span>Student at University of California, Sunnydale</span> 
+        <span>2003-2004</span>
+        </div>
+        <p>Although she never graduated, Buffy spent her college days protecting the students of UC Sunnydale from vampires and evil professors.</p>
+    <div class="job">
+        <span>Crew Member, Doublemeat Palace</span> 
+        <span>2004</span>
+        </div>
+        <p>Buffy worked part-time at the Doublemeat Palace to help pay off the debts her friends acquired while she was dead. She mostly worked the fryers and occasionally the register. Daily slayage was involved.</p>
+    <div class="job">
+        <span>Guidance Counselor, Sunnydale High School</span> 
+        <span>2004</span>
+        </div>
+        <p>Buffy briefly worked as a guidance counselor at Sunnydale High School, helping students with their personal and academic issues while secretly protecting them from supernatural threats.</p>
+        
+    </div>
+</section>
+ 
  <section id="Connect">
    <h2>Connect</h2>
-    <ul>
+    <ul class="flex-list">
         <li><a href="https://github.com/mdanimal">GitHub</a></li>
         <li><a href="https://www.linkedin.com/in/megdaniel45/">LinkedIn</a></li>
     </ul>
  </section> 
- 
+
+<section id="Skills">
+    <h2>Skills</h2>
+</section>
+
+<section id="Projects">
+    <h2>Projects</h2>
+    <ul>    
+
+    </ul>
+</section>
 
 </body>
 </html>
